[gd_scene format=3 uid="uid://b3tyqr7by0xjt"]

[ext_resource type="Script" uid="uid://bukn63aftsu6q" path="res://scripts/ui/UpgradeButton.gd" id="1_mvdy7"]

[node name="UpgradeButton" type="Button" unique_id=310739154]
custom_minimum_size = Vector2(80, 100)
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_mvdy7")

[node name="Content" type="VBoxContainer" parent="." unique_id=1106187569]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="IconColor" type="ColorRect" parent="Content" unique_id=1952020874]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4

[node name="NameLabel" type="Label" parent="Content" unique_id=1609412988]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="Content" unique_id=594876830]
layout_mode = 2
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
autowrap_mode = 3
